planes/phase-dp2-nats/temp-allow-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nats-temp-allow-data-plane
  namespace: data-plane
spec:
  podSelector:
    matchLabels:
      app: nats
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: data-plane
    ports:
    - protocol: TCP
      port: 4222
    - protocol: TCP
      port: 8222
